--- a/startup-ideas-index-saas/package.json
+++ b/startup-ideas-index-saas/package.json
@@ -19,7 +19,7 @@
   },
   "devDependencies": {
     "typescript": "5.6.2",
-    "eslint": "9.9.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
     "tailwindcss": "3.4.10",
     "postcss": "8.4.47",
@@ -28,3 +28,4 @@
     "tsx": "4.19.1"
   }
 }
+
