--- a/startup-ideas-index-saas/package.json
+++ b/startup-ideas-index-saas/package.json
@@ -3,17 +3,21 @@
   "private": true,
   "version": "0.2.0",
   "scripts": {
-    "dev": "next dev",
-  "build": "next build",
-  "start": "next start",
+"dev": "next dev",
+"build": "next build",
+"start": "next start",
 
-  "postinstall": "prisma generate --schema=prisma/schema.prisma",
 
-  "db:push": "prisma db push --schema=prisma/schema.prisma",
-  "db:migrate": "prisma migrate deploy --schema=prisma/schema.prisma",
+"postinstall": "prisma generate --schema=prisma/schema.prisma",
 
-  "db:seed": "tsx prisma/seed.ts"
-  },
+
+"vercel-build": "prisma db push --schema=prisma/schema.prisma && next build",
+
+
+"db:push": "prisma db push --schema=prisma/schema.prisma",
+"db:migrate": "prisma migrate deploy --schema=prisma/schema.prisma",
+"db:seed": "tsx prisma/seed.ts"
+},
   "dependencies": {
     "next": "14.2.5",
     "react": "18.3.1",
@@ -32,6 +36,7 @@
     "tsx": "4.19.1"
   }
 }
+
 
 
 
