--- a/startup-ideas-index-saas/package.json
+++ b/startup-ideas-index-saas/package.json
@@ -1,42 +1,37 @@
 {
-  "name": "startup-ideas-index-saas",
-  "private": true,
-  "version": "0.2.0",
-  "scripts": {
+"name": "startup-ideas-index-saas",
+"private": true,
+"version": "0.2.0",
+"scripts": {
 "dev": "next dev",
 "build": "next build",
 "start": "next start",
 
 
-"postinstall": "prisma generate --schema=prisma/schema.prisma",
+// Vercel calls this (we route Prisma + Next build here)
+"vercel-build": "prisma migrate deploy --schema=prisma/schema.prisma && next build",
 
 
-"vercel-build": "prisma db push --schema=prisma/schema.prisma && next build",
-
-
+// optional helpers for you (not called by Vercel)
 "db:push": "prisma db push --schema=prisma/schema.prisma",
 "db:migrate": "prisma migrate deploy --schema=prisma/schema.prisma",
 "db:seed": "tsx prisma/seed.ts"
 },
-  "dependencies": {
-    "next": "14.2.5",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "@prisma/client": "5.19.1",
-    "@clerk/nextjs": "6.8.3"
-  },
-  "devDependencies": {
-    "typescript": "5.6.2",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.5",
-    "tailwindcss": "3.4.10",
-    "postcss": "8.4.47",
-    "autoprefixer": "10.4.20",
-    "prisma": "5.19.1",
-    "tsx": "4.19.1"
-  }
+"dependencies": {
+"next": "14.2.5",
+"react": "18.3.1",
+"react-dom": "18.3.1",
+"@prisma/client": "5.19.1",
+"@clerk/nextjs": "6.8.3"
+},
+"devDependencies": {
+"typescript": "5.6.2",
+"eslint": "8.57.0",
+"eslint-config-next": "14.2.5",
+"tailwindcss": "3.4.10",
+"postcss": "8.4.47",
+"autoprefixer": "10.4.20",
+"prisma": "5.19.1",
+"tsx": "4.19.1"
 }
-
-
-
-
+}
